--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,15 +1,36 @@
 
 /* Small devices (tablets, 768px and up) */
-@media screen and (min-width:768px) {
+@media screen and (min-width:320px) {
     /* ... */ }
 
 
-div {
+.alert-info {
     background-color: #75aaff;
-    width: 300px;
-    padding: 25px;
+    height: 25px;
     text-align: center;
-    text-underline: none;
+    padding-top: 10px;
+    border: 1px solid gray;
+
+}
+
+body > div.alert-info.hidden-on-desktop > a {
+    text-decoration: none;
+    color: black;
+
+}
+
+body {
+    font-family: Verdana;
+
+}
+
+.sub-section {
+    font-style: italic;
+}
+
+img {
+    max-width: 100%;
+    padding: 0;
 
 }
 
@@ -17,11 +38,19 @@ h1 {
     text-align: center;
 }
 
-.nav-links {
-    display: grid;
-    grid-template-columns: 100px 100px 100px;
-    grid-template-rows: 50px 50px;
+li {
+    background-color: gray;
+    height: 30px;
+    text-align: center;
     list-style: none;
+    margin-bottom: .5em;
+    padding-top: .5em;
+}
+
+.nav-links {
+    margin: 5px 0;
+    list-style-type: none;
+    padding: 0;
 }
 
 
