--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -9,6 +9,7 @@
     height: 25px;
     text-align: center;
     padding-top: 10px;
+    padding-bottom: 10px;
     border: 1px solid gray;
 
 }
@@ -31,6 +32,7 @@ body {
 img {
     max-width: 100%;
     padding: 0;
+    height: auto;
 
 }
 
