--- a/css/media2-queries.css
+++ b/css/media2-queries.css
@@ -1,4 +1,4 @@
-* Small devices (tablets, 768px and up) */
+/** Small devices (tablets, 768px and up) *!*/
 @media screen and (min-width:320px) {
     /* ... */ }
 
