fixed custom css

--- a/css/custom.css
+++ b/css/custom.css
@@ -22,7 +22,7 @@ body > div.jumbotron.jumbotron-fluid > div {
 }
 
 h2 {
-    padding-top: 50px
+    padding-top: 50px;
     text-align: left;
     margin-left: 20px;
 }
